Moved the benchmark function to the notebook

--- a/tests/benchmark_infrared.ipynb
+++ b/tests/benchmark_infrared.ipynb
@@ -2,46 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l_a computed\n",
-      "readPAH computed\n",
-      "Loaded previously computed Jpeisrf arrays from file.\n",
-      "Tev table already exists at /Users/zzhang/Workspace/SpyDust/SpyDust/Data_Files/Tev_30a_30chi.txt.\n",
-      "I(Zg<0, parabolic) stored\n",
-      "I(rot, e, Zg <> 0) stored\n",
-      "I(Zg<0, parabolic) stored\n",
-      "I(rot, e, Zg <> 0) stored\n",
-      "I(Zg<0, parabolic) stored\n",
-      "I(rot, e, Zg <> 0) stored\n",
-      "I(Zg<0, parabolic) stored\n",
-      "I(rot, e, Zg <> 0) stored\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/zzhang/Workspace/SpyDust/SpyDust/free_free.py:27: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
-      "  data = pd.read_csv(gff_data_file, delim_whitespace=True, comment=';', header=None, names=['gamma2', 'u', 'gff'])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Gaunt factor stored\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import SpyDust.infrared as SpyIR\n",
     "import SpyDust.util as SpyUtil\n",
+    "from SpyDust.mpiutil import parallel_map\n",
     "import numpy as np\n",
     "import sys\n",
     "import os\n",
@@ -69,7 +36,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Benchmark_compute_FGIR_integrals(a_tab, chi_tab):\n",
+    "    \"\"\"\n",
+    "    Computes and stores FIR and GIR integrals for charged and neutral grains\n",
+    "    over a range of grain sizes (a) and ISRF scaling factors (Chi).\n",
+    "    \"\"\"\n",
+    "    a_tab = a_tab.copy()\n",
+    "    chi_tab = chi_tab.copy()\n",
+    "    a_tab = a_tab.reshape(-1)\n",
+    "    chi_tab = chi_tab.reshape(-1)\n",
+    "    Na = len(a_tab)\n",
+    "    Nchi = len(chi_tab)\n",
+    "\n",
+    "    # If the FIR and GIR integrals are already stored in the data directory, \n",
+    "    # load them and return\n",
+    "\n",
+    "    # Loop over grain sizes (a_tab) and Chi values (chi_tab)\n",
+    "    # Define a function to do the loop for a given grain size\n",
+    "    def loop(ia):\n",
+    "        a = a_tab[ia]\n",
+    "        Energy_modes_op, Energy_modes_ip, Energy_modes_CH = SpyIR.Energy_modes(a)\n",
+    "        Mval = 100\n",
+    "        Energy_max = 13.6 * SpyIR.eV  # Maximum energy in erg\n",
+    "        result = np.zeros((Nchi, 4))\n",
+    "        for ichi in range(Nchi):\n",
+    "            Chi = chi_tab[ichi]\n",
+    "            # Compute integrals for charged grains (Z = 1)\n",
+    "            FGIR_integral_charged, Energy_max, Mval = SpyIR.FGIR_integrals(a, 1, Chi,  Energy_modes_op, Energy_modes_ip, Energy_modes_CH, Mval, Energy_max)\n",
+    "            result[ichi, 0] = FGIR_integral_charged['FIR_integral']\n",
+    "            result[ichi, 1] = FGIR_integral_charged['GIR_integral']\n",
+    "            # Compute integrals for neutral grains (Z = 0)\n",
+    "            FGIR_integral_neutral, Energy_max, Mval = SpyIR.FGIR_integrals(a, 0, Chi,  Energy_modes_op, Energy_modes_ip, Energy_modes_CH, Mval, Energy_max)\n",
+    "            result[ichi, 2] = FGIR_integral_neutral['FIR_integral']\n",
+    "            result[ichi, 3] = FGIR_integral_neutral['GIR_integral']\n",
+    "        return result\n",
+    "    \n",
+    "    import time\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    # Parallelize the loop\n",
+    "    result = np.array(parallel_map(loop, np.arange(Na)) ) # Actually not really parallel here, as we only have one MPI rank in jupyter notebook\n",
+    "\n",
+    "    end_time = time.time()\n",
+    "\n",
+    "    print(f\"Time taken to compute FGIR integrals: {end_time - start_time:.2f} seconds\")\n",
+    "        \n",
+    "    FIR_integral_charged = result[:, :, 0]\n",
+    "    GIR_integral_charged = result[:, :, 1]\n",
+    "    FIR_integral_neutral = result[:, :, 2]\n",
+    "    GIR_integral_neutral = result[:, :, 3]\n",
+    "\n",
+    "    return FIR_integral_charged, GIR_integral_charged, FIR_integral_neutral, GIR_integral_neutral\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,66 +172,66 @@
      "text": [
       "Benchmarking different grain sizes (fixed chi = 1.00e-05)\n",
       "======================================================================\n",
-      "a[ 0] = 3.70e-08 cm  -->  1.096 seconds\n",
-      "a[ 0] = 3.70e-08 cm  -->  1.096 seconds\n",
-      "a[ 1] = 4.14e-08 cm  -->  1.072 seconds\n",
-      "a[ 1] = 4.14e-08 cm  -->  1.072 seconds\n",
-      "a[ 2] = 4.63e-08 cm  -->  1.074 seconds\n",
-      "a[ 2] = 4.63e-08 cm  -->  1.074 seconds\n",
-      "a[ 3] = 5.18e-08 cm  -->  1.093 seconds\n",
-      "a[ 3] = 5.18e-08 cm  -->  1.093 seconds\n",
-      "a[ 4] = 5.79e-08 cm  -->  1.088 seconds\n",
-      "a[ 4] = 5.79e-08 cm  -->  1.088 seconds\n",
-      "a[ 5] = 6.47e-08 cm  -->  1.073 seconds\n",
-      "a[ 5] = 6.47e-08 cm  -->  1.073 seconds\n",
-      "a[ 6] = 7.24e-08 cm  -->  1.065 seconds\n",
-      "a[ 6] = 7.24e-08 cm  -->  1.065 seconds\n",
-      "a[ 7] = 8.09e-08 cm  -->  1.091 seconds\n",
-      "a[ 7] = 8.09e-08 cm  -->  1.091 seconds\n",
-      "a[ 8] = 9.05e-08 cm  -->  1.071 seconds\n",
-      "a[ 8] = 9.05e-08 cm  -->  1.071 seconds\n",
-      "a[ 9] = 1.01e-07 cm  -->  1.562 seconds\n",
-      "a[ 9] = 1.01e-07 cm  -->  1.562 seconds\n",
-      "a[10] = 1.13e-07 cm  -->  1.080 seconds\n",
-      "a[10] = 1.13e-07 cm  -->  1.080 seconds\n",
-      "a[11] = 1.27e-07 cm  -->  1.069 seconds\n",
-      "a[11] = 1.27e-07 cm  -->  1.069 seconds\n",
-      "a[12] = 1.41e-07 cm  -->  1.100 seconds\n",
-      "a[12] = 1.41e-07 cm  -->  1.100 seconds\n",
-      "a[13] = 1.58e-07 cm  -->  1.087 seconds\n",
-      "a[13] = 1.58e-07 cm  -->  1.087 seconds\n",
-      "a[14] = 1.77e-07 cm  -->  1.610 seconds\n",
-      "a[14] = 1.77e-07 cm  -->  1.610 seconds\n",
-      "a[15] = 1.98e-07 cm  -->  1.110 seconds\n",
-      "a[15] = 1.98e-07 cm  -->  1.110 seconds\n",
-      "a[16] = 2.21e-07 cm  -->  1.122 seconds\n",
-      "a[16] = 2.21e-07 cm  -->  1.122 seconds\n",
-      "a[17] = 2.47e-07 cm  -->  1.151 seconds\n",
-      "a[17] = 2.47e-07 cm  -->  1.151 seconds\n",
-      "a[18] = 2.77e-07 cm  -->  3.550 seconds\n",
-      "a[18] = 2.77e-07 cm  -->  3.550 seconds\n",
-      "a[19] = 3.09e-07 cm  -->  2.504 seconds\n",
-      "a[19] = 3.09e-07 cm  -->  2.504 seconds\n",
-      "a[20] = 3.46e-07 cm  -->  2.541 seconds\n",
-      "a[20] = 3.46e-07 cm  -->  2.541 seconds\n",
-      "a[21] = 3.87e-07 cm  -->  2.609 seconds\n",
-      "a[21] = 3.87e-07 cm  -->  2.609 seconds\n",
-      "a[22] = 4.33e-07 cm  -->  3.869 seconds\n",
-      "a[22] = 4.33e-07 cm  -->  3.869 seconds\n",
-      "a[23] = 4.84e-07 cm  -->  2.774 seconds\n",
-      "a[23] = 4.84e-07 cm  -->  2.774 seconds\n",
-      "a[24] = 5.41e-07 cm  -->  4.203 seconds\n",
-      "a[24] = 5.41e-07 cm  -->  4.203 seconds\n",
-      "a[25] = 6.05e-07 cm  -->  4.310 seconds\n",
-      "a[25] = 6.05e-07 cm  -->  4.310 seconds\n",
-      "a[26] = 6.76e-07 cm  -->  4.222 seconds\n",
-      "a[26] = 6.76e-07 cm  -->  4.222 seconds\n",
-      "a[27] = 7.56e-07 cm  -->  8.477 seconds\n",
-      "a[27] = 7.56e-07 cm  -->  8.477 seconds\n",
-      "a[28] = 8.46e-07 cm  -->  6.667 seconds\n",
-      "a[28] = 8.46e-07 cm  -->  6.667 seconds\n",
-      "a[29] = 9.46e-07 cm  -->  6.631 seconds\n",
-      "a[29] = 9.46e-07 cm  -->  6.631 seconds\n"
+      "a[ 0] = 3.70e-08 cm  -->  1.128 seconds\n",
+      "a[ 0] = 3.70e-08 cm  -->  1.128 seconds\n",
+      "a[ 1] = 4.14e-08 cm  -->  1.079 seconds\n",
+      "a[ 1] = 4.14e-08 cm  -->  1.079 seconds\n",
+      "a[ 2] = 4.63e-08 cm  -->  1.075 seconds\n",
+      "a[ 2] = 4.63e-08 cm  -->  1.075 seconds\n",
+      "a[ 3] = 5.18e-08 cm  -->  1.100 seconds\n",
+      "a[ 3] = 5.18e-08 cm  -->  1.100 seconds\n",
+      "a[ 4] = 5.79e-08 cm  -->  1.091 seconds\n",
+      "a[ 4] = 5.79e-08 cm  -->  1.091 seconds\n",
+      "a[ 5] = 6.47e-08 cm  -->  1.089 seconds\n",
+      "a[ 5] = 6.47e-08 cm  -->  1.089 seconds\n",
+      "a[ 6] = 7.24e-08 cm  -->  1.083 seconds\n",
+      "a[ 6] = 7.24e-08 cm  -->  1.083 seconds\n",
+      "a[ 7] = 8.09e-08 cm  -->  1.095 seconds\n",
+      "a[ 7] = 8.09e-08 cm  -->  1.095 seconds\n",
+      "a[ 8] = 9.05e-08 cm  -->  1.078 seconds\n",
+      "a[ 8] = 9.05e-08 cm  -->  1.078 seconds\n",
+      "a[ 9] = 1.01e-07 cm  -->  1.568 seconds\n",
+      "a[ 9] = 1.01e-07 cm  -->  1.568 seconds\n",
+      "a[10] = 1.13e-07 cm  -->  1.094 seconds\n",
+      "a[10] = 1.13e-07 cm  -->  1.094 seconds\n",
+      "a[11] = 1.27e-07 cm  -->  1.073 seconds\n",
+      "a[11] = 1.27e-07 cm  -->  1.073 seconds\n",
+      "a[12] = 1.41e-07 cm  -->  1.105 seconds\n",
+      "a[12] = 1.41e-07 cm  -->  1.105 seconds\n",
+      "a[13] = 1.58e-07 cm  -->  1.099 seconds\n",
+      "a[13] = 1.58e-07 cm  -->  1.099 seconds\n",
+      "a[14] = 1.77e-07 cm  -->  1.628 seconds\n",
+      "a[14] = 1.77e-07 cm  -->  1.628 seconds\n",
+      "a[15] = 1.98e-07 cm  -->  1.113 seconds\n",
+      "a[15] = 1.98e-07 cm  -->  1.113 seconds\n",
+      "a[16] = 2.21e-07 cm  -->  1.110 seconds\n",
+      "a[16] = 2.21e-07 cm  -->  1.110 seconds\n",
+      "a[17] = 2.47e-07 cm  -->  1.142 seconds\n",
+      "a[17] = 2.47e-07 cm  -->  1.142 seconds\n",
+      "a[18] = 2.77e-07 cm  -->  3.559 seconds\n",
+      "a[18] = 2.77e-07 cm  -->  3.559 seconds\n",
+      "a[19] = 3.09e-07 cm  -->  2.513 seconds\n",
+      "a[19] = 3.09e-07 cm  -->  2.513 seconds\n",
+      "a[20] = 3.46e-07 cm  -->  2.553 seconds\n",
+      "a[20] = 3.46e-07 cm  -->  2.553 seconds\n",
+      "a[21] = 3.87e-07 cm  -->  2.619 seconds\n",
+      "a[21] = 3.87e-07 cm  -->  2.619 seconds\n",
+      "a[22] = 4.33e-07 cm  -->  3.897 seconds\n",
+      "a[22] = 4.33e-07 cm  -->  3.897 seconds\n",
+      "a[23] = 4.84e-07 cm  -->  2.785 seconds\n",
+      "a[23] = 4.84e-07 cm  -->  2.785 seconds\n",
+      "a[24] = 5.41e-07 cm  -->  4.196 seconds\n",
+      "a[24] = 5.41e-07 cm  -->  4.196 seconds\n",
+      "a[25] = 6.05e-07 cm  -->  4.250 seconds\n",
+      "a[25] = 6.05e-07 cm  -->  4.250 seconds\n",
+      "a[26] = 6.76e-07 cm  -->  4.194 seconds\n",
+      "a[26] = 6.76e-07 cm  -->  4.194 seconds\n",
+      "a[27] = 7.56e-07 cm  -->  8.355 seconds\n",
+      "a[27] = 7.56e-07 cm  -->  8.355 seconds\n",
+      "a[28] = 8.46e-07 cm  -->  6.536 seconds\n",
+      "a[28] = 8.46e-07 cm  -->  6.536 seconds\n",
+      "a[29] = 9.46e-07 cm  -->  6.580 seconds\n",
+      "a[29] = 9.46e-07 cm  -->  6.580 seconds\n"
      ]
     }
    ],
@@ -232,7 +258,7 @@
     "    \n",
     "    start_time = time.time()\n",
     "    with suppress_stdout():\n",
-    "        result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_test]), np.array([chi_fixed]))\n",
+    "        result = Benchmark_compute_FGIR_integrals(np.array([a_test]), np.array([chi_fixed]))\n",
     "    end_time = time.time()\n",
     "    \n",
     "    elapsed = end_time - start_time\n",
@@ -255,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +295,7 @@
    "source": [
     "start_time = time.time()\n",
     "with suppress_stdout():\n",
-    "    result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_tab[-1]*10]), np.array([chi_fixed]))\n",
+    "    result = Benchmark_compute_FGIR_integrals(np.array([a_tab[-1]*10]), np.array([chi_fixed]))\n",
     "end_time = time.time()\n",
     "\n",
     "elapsed = end_time - start_time\n",
@@ -294,7 +320,9 @@
     "# test_indices = [0, Na//4, Na//2, 3*Na//4, Na-1]  # Sample 5 grain sizes\n",
     "\n",
     "# Add an extra large grain size for testing\n",
-    "a_tab_extended = np.append(a_tab, a_max*20)\n",
+    "# a_tab_extended = np.append(a_tab, a_max*10)\n",
+    "a_tab_extended = a_tab\n",
+    "\n",
     "Na_extended = len(a_tab_extended)\n",
     "\n",
     "test_indices = np.arange(Na_extended)  # Test all grain sizes including the extra large one\n",
@@ -310,7 +338,7 @@
     "    \n",
     "    start_time = time.time()\n",
     "    with suppress_stdout():\n",
-    "        result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_test]), np.array([chi_fixed]))\n",
+    "        result = Benchmark_compute_FGIR_integrals(np.array([a_test]), np.array([chi_fixed]))\n",
     "    end_time = time.time()\n",
     "    \n",
     "    elapsed = end_time - start_time\n",
@@ -332,7 +360,7 @@
    "source": [
     "start_time = time.time()\n",
     "with suppress_stdout():\n",
-    "    result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_tab[-1]*10]), np.array([chi_fixed]))\n",
+    "    result = Benchmark_compute_FGIR_integrals(np.array([a_tab[-1]*10]), np.array([chi_fixed]))\n",
     "end_time = time.time()\n",
     "\n",
     "elapsed = end_time - start_time\n",
@@ -391,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +508,7 @@
     "    \n",
     "    start_time = time.time()\n",
     "    with suppress_stdout():\n",
-    "        result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_fixed]), np.array([chi_test]))\n",
+    "        result = Benchmark_compute_FGIR_integrals(np.array([a_fixed]), np.array([chi_test]))\n",
     "    end_time = time.time()\n",
     "    \n",
     "    elapsed = end_time - start_time\n",
@@ -504,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +621,7 @@
     "    \n",
     "    start_time = time.time()\n",
     "    with suppress_stdout():\n",
-    "        result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_fixed]), np.array([chi_test]))\n",
+    "        result =  Benchmark_compute_FGIR_integrals(np.array([a_fixed]), np.array([chi_test]))\n",
     "    end_time = time.time()\n",
     "    \n",
     "    elapsed = end_time - start_time\n",
@@ -650,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +774,7 @@
     "        \n",
     "        start_time = time.time()\n",
     "        with suppress_stdout():\n",
-    "            result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_test]), np.array([chi_test]))\n",
+    "            result = Benchmark_compute_FGIR_integrals(np.array([a_test]), np.array([chi_test]))\n",
     "        end_time = time.time()\n",
     "        \n",
     "        elapsed = end_time - start_time\n",
